# caveman-talk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
caveman/: __init__.py  prompts.py  translate.py
skills/caveman-talk/: SKILL.md
tests/: test_translate.py
